@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20140303] [svn: r557]
+Changelog for sg3_utils-1.38 [20140308] [svn: r558]
   - sg_ses: add --dev-slot-num= and --sas-addr=
     - fix --data=- problem with large buffers
     - new --data=@FN to read hex data from file FN
@@ -45,6 +45,7 @@ Changelog for sg3_utils-1.38 [20140303] [svn: r557]
   - scripts/rescan-scsi-bus.sh: check if FC driver exports
     issue_lip before using it
     - man page added (Linux only)
+  - scripts/59-scsi-sg3_utils.rules: linux specific udev rules
   - examples: add sg_tst_excl3 for testing O_EXCL
     - improve sg_tst_excl and sg_tst_excl2
     - add sg_tst_context for testing file handle contexts
